--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             BABYLON.SceneLoader.ImportMesh(
                 "",
                 "https://raw.githubusercontent.com/cuongpo/babylon/main/",
-                "mtw.glb",
+                "mtw-1k.glb",
                 scene,
                 function (meshes) {          
                     
